# digipathos_downloader

./: .gitignore  README.md  pyproject.toml
digipathos_downloader/: README.md  download.py
test/: conftest.py  test_download_funcs.py
