[tool.poetry]
name = "digipathos-downloader"
version = "0.1.0"
description = "Digipathos plant disease image database (EMBRAPA) downloader based on georg-un project"
authors = ["Mateus Assis <mateus.d.assis.silva@gmail.com>"]
readme = "README.md"
packages = [{include = "digipathos_downloader"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
